--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.idea/
+.idea/*
 assets/*
 !assets/.gitignore
 protected/runtime/*
 !protected/runtime/.gitignore
 protected/data/*.db
 themes/classic/views/
-/.idea/
+
